syntax = "proto3";
package smartContractExecuteResult;
import "proto/smartContractExecuteRequest.proto";
option go_package = "/proto";

message SmartContractExecuteResultHashData {
    bytes TransactionHash = 1;
    smartContractExecuteRequest.EXECUTE_TYPE Type = 2;

    map<string,bytes> MapAddressAddBalanceChange = 3; // addresses with add balance
    map<string,bytes> MapAddressSubBalanceChange = 4;// addresses with sub balance
    map<string,bytes> MapContractAddressDeployedCodeHash = 5; // address were deployed by this transaction
    map<string,bytes> MapContractAddressNewStorageRoot = 6; // address with new storage root
    map<string,bytes> MapContractAddressNewLogHash = 7; // address with new log hash

    uint32 ExitReason = 8; // returns (function had call return) or halted (function run complete with no return ) or threw (err) 
    uint32 Exception = 9; // Exception has been threw
    bytes ExMsg = 10; // expcetion message
    bytes Return = 11; // result after call
}

message SmartContractExecuteResult {
    bytes TransactionHash = 1;
    smartContractExecuteRequest.EXECUTE_TYPE Type = 2;

    map<string,bytes> MapAddressAddBalanceChange = 3; // addresses with add balance
    map<string,bytes> MapAddressSubBalanceChange = 4;// addresses with sub balance
    map<string,bytes> MapContractAddressDeployedCodeHash = 5; // address were deployed by this transaction
    map<string,bytes> MapContractAddressNewStorageRoot = 6; // address were deployed by this transaction
    map<string,bytes> MapContractAddressNewLogHash = 7; // address with new log hash

    uint32 ExitReason = 8; // returns (function had call return) or halted (function run complete with no return ) or threw (err) 
    uint32 Exception = 9; // Exception has been threw
    bytes ExMsg = 10; // expcetion message
    bytes Return = 11; // result after call
    bytes Hash = 12; // use for voting result
}   

message SmartContractExecuteResults {
    repeated SmartContractExecuteResult Results = 1;
}